# ProdPrice-AI-Predict-prices-from-product-descriptions

./: .env.example  .gitignore  01_dataset_exploration_and_curation.ipynb  02_llm_batch_summarization.ipynb  03_classical_ml_baselines.ipynb  04_neural_networks_and_frontier_llms.ipynb  05_openai_fine_tuning.ipynb  README.md  pyproject.toml  redemption_train.ipynb  results.ipynb
